uni nosotros con el index

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 </head>
 
 <body>
-    <!-- Header -->
     <header>
         <div class="barraNavegacion">
             <a href="#">
@@ -24,17 +23,16 @@
         <nav>
             <ul class="enlaces">
                 <li><a href="#">Inicio</a></li>
-                <li><a href="./pages/nosotros.html"> Nosotros </a></li>
+                <li><a href="./pages/habitaciones.html"> Habitaciones </a></li>
                 <li><a href="./pages/contacto.html"> Contacto </a></li>
                 <li><a href="./pages/actividades.html"> Actividades </a></li>
-                <li><a href="./pages/ubicacion.html"> Ubicacion </a></li>
+                <li><a href="./pages/tarifas.html"> Tarifas </a></li>
             </ul>
         </nav>
     </header>
 
     <hr>
 
-    <!-- Main -->
     <main>
         <section>
             <div>
@@ -55,7 +53,6 @@
                         </p>
                     </div>
                 </article>
-
                 <article>
                     <div class="portada">
                         <h3>ejemplo</h3>
@@ -130,8 +127,8 @@
                 </article>
                 <article>
                     <div class="imagenes">
-                        <img class="tafi1" src="./Img/paisaje-tafi-main.jpg" alt="Paisaje Tafi">
-                        <img class="tafi2" src="./Img/paisaje-cabaña-main.jpg" alt="Pisaje portada">
+                        <img class="tafi" src="./Img/paisaje-tafi-main.jpg" alt="Paisaje Tafi">
+                        <img class="tafi" src="./Img/paisaje-cabaña-main.jpg" alt="Pisaje portada">
                     </div>
                 </article>
                 <article>
@@ -147,11 +144,88 @@
                 </article>
             </div>
         </section>
+        <section>
+            <div class="Nosotros">
+                <h3>Moxy Cabañas</h3>
+                <p>
+                    El Grupo Mox es una empresa familiar con amplia experiencia en turismo.
+                    A medida que sus integrantes se convirtieron en profesionales arquitectos y decoradores, el
+                    Grupo
+                    Mox
+                    fue
+                    adquiriendo conocimiento y experiencia en otras áreas hasta el momento no exploradas y con el
+                    mismo
+                    espíritu
+                    de integración y crecimiento que los caracterizó desde un principio, se creó la cadena Moxy
+                    Cabañas,
+                    cuya
+                    filosofía conjuga experiencia, profesionalismo y vocación de servicio.
+
+                    Cabañas Moxy cuenta con alojamiento, cada una con capacidad para 6 personas. La
+                    disposición de las cabañas preserva vistas privilegiadas desde todos los puntos y propone la
+                    privacidad
+                    necesaria para cada huésped.
+
+                    El complejo cuenta con piscina, juegos para niños y espacios comunes para el entretenimiento. La
+                    seguridad, dispuesta como servicio diferencial, promete una estadía sin inconvenientes.
+
+                    Familiar, privado, seguro. Destacado como un alojamiento reconocido en la zona,
+                    sostiene, a través de los años, la capacidad de asistir a los turistas con un servicio
+                    direccionado
+                    a
+                    cada necesidad y expectativa.
+                </p>
+                <img class="imagenNosotros" src="../Img/cabaña-tafi.jpg" alt="">
+            </div>
+            </article>
+            <article>
+                <div class="cabaña1">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat aperiam iure, sed perspiciatis
+                        laudantium obcaecati dolores blanditiis? Nisi blanditiis molestiae repellat tempore? Ipsa
+                        perspiciatis modi iusto facere officiis, voluptatibus harum.
+                        Vel vitae ipsa, dignissimos eveniet libero quae suscipit nemo quas velit sapiente esse unde
+                        delectus
+                        amet odit animi. Optio perspiciatis minus beatae similique quas at maiores eius temporibus nobis
+                        accusamus.
+                        Perferendis ex non harum? Reiciendis, fugit aliquid. Eveniet velit soluta fugit? Nulla facilis
+                        voluptas dignissimos nobis corrupti laborum ea? Assumenda odio totam repudiandae porro,
+                        perspiciatis
+                        eligendi dolorem corporis inventore. A.
+                        A id voluptatem odit vitae tempore nemo, explicabo consectetur soluta autem minus sunt! Minus
+                        aliquid qui pariatur vel deleniti eum vitae nam deserunt, esse quas temporibus aliquam maxime
+                        dolores ab!
+                        Laborum excepturi nam aliquam necessitatibus, provident libero deleniti quasi, ex nulla
+                        laboriosam
+                        adipisci eum soluta quaerat nisi eveniet quia, hic praesentium sunt fuga unde saepe. Expedita
+                        laboriosam animi repellat assumenda?</p>
+                    <img src="../Img/Nosotros 4.jpg" alt="">
+                </div>
+            </article>
+            <article>
+                <div class="cabaña2">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Alias eveniet commodi odio fugit, magni
+                        at, possimus iusto soluta optio ut atque nemo facere, fugiat inventore fuga aspernatur placeat
+                        ducimus necessitatibus.
+                        Dolores doloribus soluta modi repellendus animi, consequuntur eveniet dolorem accusantium ipsa
+                        molestiae, suscipit aspernatur enim, magnam fuga. Iure, in vero magnam labore consequatur
+                        doloremque maxime soluta, quaerat temporibus facilis incidunt!
+                        Nihil molestias quam id dolorem, dolorum laborum assumenda rem ratione sed similique nemo
+                        voluptate hic excepturi ipsam. Sunt accusantium modi voluptates! Nemo ipsam delectus porro velit
+                        numquam! Consectetur, modi quaerat!
+                        Praesentium mollitia aliquid et repellendus eius, nesciunt nemo, eum ullam, itaque autem
+                        deserunt rerum consequuntur recusandae. Voluptate quae, cum animi eos, voluptatibus aspernatur
+                        impedit eligendi quod suscipit facere nostrum dolor?
+                        Quae corrupti ratione harum ducimus atque, nostrum eius nulla consequatur voluptas consequuntur
+                        dicta, dolorum expedita pariatur. Id ea, at alias et, architecto beatae impedit ab minima
+                        voluptates dignissimos mollitia quibusdam?</p>
+                    <img src="../Img/Nosotros 2.jpg" alt="">
+                </div>
+            </article>
+        </section>
     </main>
 
     <hr>
 
-    <!-- Footer -->
     <footer class="footer">
         <div class="footer__info">
             <h4>Informacion de contacto</h4>
@@ -176,7 +250,6 @@
             <p>Copyright © 2023 Moxy</p>
         </div>
     </footer>
-
 </body>
 
 </html>
