--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -24,10 +24,10 @@
         <nav>
             <ul class="enlaces">
                 <li><a href="../index.html">Inicio</a></li>
-                <li><a href="./nosotros.html"> Nosotros </a></li>
+                <li><a href="./habitaciones.html"> Habitaciones </a></li>
                 <li><a href="#"> Contacto </a></li>
                 <li><a href="./actividades.html"> Actividades </a></li>
-                <li><a href="./ubicacion.html"> Ubicacion </a></li>
+                <li><a href="./tarifas.html"> Tarifas </a></li>
             </ul>
         </nav>
     </header>
