--- a/pages/tarifas.html
+++ b/pages/tarifas.html
@@ -24,10 +24,10 @@
         <nav>
             <ul class="enlaces">
                 <li><a href="../index.html">Inicio</a></li>
-                <li><a href="./nosotros.html"> Nosotros </a></li>
+                <li><a href="./habitaciones.html"> Habitaciones </a></li>
                 <li><a href="./contacto.html"> Contacto </a></li>
                 <li><a href="./actividades.html"> Actividades </a></li>
-                <li><a href="#"> Ubicacion </a></li>
+                <li><a href="#"> Tarifas </a></li>
             </ul>
         </nav>
     </header>
