avance grid html contacto

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </article>
                 <article>
                     <div class="portada">
-                        <h3>ejemplo</h3>
+                        <h3>Ejemplo</h3>
                         <p class="descripcion">
                             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur sequi ex ducimus
                             dolores
