--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -31,7 +31,7 @@
                 </ul>
             </nav>
         </header>
-        
+
         <hr>
 
         <section id="seccion1">
@@ -175,14 +175,14 @@
 
         <aside>
                 <div class="asideContacto">
-                    <img src="/Img/aside1.jpg" alt="">
-                    <img src="/Img/aside2.jpg" alt="">
-                    <img src="/Img/aside3.jpg" alt="">
-                    <img src="/Img/aside4.jpg" alt="">
-                    <img src="/Img/aside5.jpg" alt="">
-                    <img src="/Img/aside6.jpg" alt="">
-                    <img src="/Img/aside7.jpg" alt="">
-                    <img src="/Img/aside8.jpg" alt="">
+                    <img class="asideImage" src="/Img/aside1.jpg" alt="">
+                    <img class="asideImage" src="/Img/aside2.jpg" alt="">
+                    <img class="asideImage" src="/Img/aside3.jpg" alt="">
+                    <img class="asideImage" src="/Img/aside4.jpg" alt="">
+                    <img class="asideImage" src="/Img/aside5.jpg" alt="">
+                    <img class="asideImage" src="/Img/aside6.jpg" alt="">
+                    <img class="asideImage" src="/Img/aside7.jpg" alt="">
+                    <img class="asideImage" src="/Img/aside8.jpg" alt="">
                 </div>
         </aside>
 
