--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -38,14 +38,14 @@
             <h2>Contactanos</h2>
             <fieldset>
                 <legend>INGRESE SUS DATOS</legend>
-                <form action="">
+                <form class="formulario" action="">
                     <div>
-                        <label for="Nombre">Nombre</label>
+                        <label for="Nombre">Nombre:</label>
                         <input id="Nombre" type="text">
                     </div>
 
                     <div>
-                        <label for="Apellido">Apellido</label>
+                        <label for="Apellido">Apellido:</label>
                         <input id="Apellido" type="text">
                     </div>
 
@@ -55,18 +55,18 @@
                     </div>
 
                     <div>
-                        <label for="Telefono">Telefono</label>
+                        <label for="Telefono">Telefono:</label>
                         <input type="number">
                     </div>
 
                     <div>
-                        <label for="Observaciones">Observaciones</label>
+                        <label for="Observaciones">Observaciones:</label>
                         <br><br>
                         <textarea name="Observaciones" id="" cols="30" rows="10"></textarea>
                     </div>
 
                     <div>
-                        <label for="Novedades">Deseo recibir Novedades</label>
+                        <label for="Novedades">Deseo Recibir Novedades</label>
                         <input id="Novedades" type="checkbox">
                     </div>
 
@@ -78,112 +78,110 @@
         </section>
 
         <section id="seccion2">
-            <nav>
+            <div class="llegar">
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d28477.63218807254!2d-65.7292225282011!3d-26.849364668373077!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94221877e80d28cf%3A0x7cf806901072e845!2zVGFmw60gZGVsIFZhbGxlLCBUdWN1bcOhbg!5e0!3m2!1ses!2sar!4v1692913319168!5m2!1ses!2sar"
                     width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade">Ubicacion</iframe>
-            </nav>
-            <article>
-                <h3>¿Donde estamos?</h3>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi minus provident expedita ea error
-                    commodi, incidunt nam eaque rem ipsum obcaecati labore architecto, non tenetur deserunt
-                    praesentium?
-                    Obcaecati, eum incidunt.
-                    Distinctio ipsa, tempore officiis temporibus maxime dolore. Corrupti magnam assumenda nobis
-                    officiis
-                    distinctio soluta natus perspiciatis delectus dolorum numquam doloribus iure, veniam, ratione
-                    odio
-                    praesentium provident. Enim placeat optio voluptas.
-                    Doloremque, voluptatem necessitatibus, error illum culpa dicta, iusto officia unde rem
-                    praesentium
-                    totam minima vel at officiis sequi numquam. Ut officiis molestias magnam facere a? Quas eveniet
-                    nisi
-                    perferendis nulla!
-                    Adipisci esse inventore repellat deserunt. Veritatis porro minima ducimus voluptate numquam, est
-                    vero accusantium excepturi ab consequatur odio quos tempore harum neque omnis blanditiis!
-                    Distinctio
-                    minima odit ducimus rerum culpa?
-                    Explicabo fuga, sint tenetur quam eum fugit provident rem qui eaque ullam facere laboriosam
-                    ducimus.
-                    Expedita beatae omnis eligendi eos excepturi voluptate sint aperiam maxime, laudantium,
-                    voluptatum
-                    natus accusamus iste.
-                    Quaerat quibusdam vero eum ex deserunt dignissimos nihil rem ullam incidunt, tempora
-                    accusantium!
-                    Quam omnis deserunt minus commodi odit laborum? Ut velit quibusdam nobis impedit amet?
-                    Doloremque
-                    rerum modi exercitationem.
-                    Quos, dolores blanditiis. Cupiditate, aspernatur repellendus? Voluptas excepturi repudiandae
-                    voluptatem ad, doloribus culpa at cupiditate molestias nesciunt, odio dignissimos cumque
-                    praesentium
-                    quaerat libero quasi eum nisi cum quo sequi. Blanditiis?
-                    Alias vero non eos minus veniam ipsa corrupti libero impedit est quas beatae cupiditate quos at
-                    amet, natus voluptatibus exercitationem facilis officiis facere ratione nihil illum! Dolores
-                    unde
-                    dolore quos?
-                    Quidem magni amet alias corrupti rerum omnis temporibus quibusdam consequatur nemo itaque
-                    voluptate
-                    quam voluptatem corporis dolorum esse vero magnam, doloribus reiciendis consectetur autem vel
-                    officiis iste? Sed, praesentium aliquid.
-                    Velit repellat, maiores veritatis incidunt soluta vitae voluptate perspiciatis nulla doloribus
-                    quae
-                    quos tenetur maxime numquam pariatur necessitatibus vel ipsum blanditiis harum iusto cupiditate
-                    aut!
-                    Quas, ipsa. Nemo, illum eveniet.
-                </p>
-            </article>
-            <article>
-                <h3>Como llegar</h3>
-                <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Esse repellendus, repudiandae
-                    cupiditate
-                    aliquam eum voluptatibus quas magni eos similique molestiae excepturi impedit incidunt nihil
-                    veritatis vitae tempora necessitatibus voluptate iusto.
-                    A ad vel quae recusandae obcaecati repellat facere autem, minus sed. Fugit eligendi nemo neque
-                    porro
-                    earum. Nobis maiores ex dolorum consectetur minus reprehenderit ipsa magni, aliquid rerum quas
-                    ducimus.
-                    Rem eius tenetur earum, ut laudantium labore obcaecati commodi sunt autem inventore vitae rerum
-                    blanditiis? Eius esse porro totam sequi, beatae voluptatum eveniet optio nemo! Quisquam
-                    cupiditate
-                    deleniti nihil expedita?
-                    Facilis natus doloribus eum saepe est eos odit porro eaque tempore reiciendis officiis deleniti,
-                    animi repellendus, corporis numquam ex laboriosam sapiente aperiam culpa! Est, quod libero?
-                    Molestiae ipsum molestias inventore.
-                    Error iure consectetur delectus nisi possimus illo cum corporis. Error quis dolor consequuntur
-                    reprehenderit? Deleniti ipsam doloremque odit magni nostrum repellat deserunt, sit natus? Rerum
-                    voluptatibus magnam explicabo ipsum repudiandae.
-                    Debitis illo ad, facilis nostrum incidunt natus officiis similique dolore impedit nobis nam aut
-                    cupiditate sunt inventore eum reprehenderit ullam? Ipsa, consequatur nisi sequi nobis cum
-                    commodi
-                    impedit est minima.
-                    Ipsa voluptates amet atque soluta doloremque quas facere molestiae illo, sunt quaerat. Magnam
-                    soluta
-                    atque deserunt aliquid aperiam nam quas labore, necessitatibus voluptate ea. Animi quo
-                    dignissimos
-                    libero sed non?
-                    Nisi, facilis nemo minus blanditiis molestiae vitae voluptate quia sit saepe provident
-                    temporibus
-                    eaque debitis atque? Et dolorum dignissimos in mollitia similique aliquam nulla assumenda.
-                    Nostrum
-                    dolorem tempora eligendi est.
-                </p>
-            </article>
+                <div class="estamos">
+                    <h3>¿Donde estamos?</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi minus provident expedita ea error
+                        commodi, incidunt nam eaque rem ipsum obcaecati labore architecto, non tenetur deserunt
+                        praesentium?
+                        Obcaecati, eum incidunt.
+                        Distinctio ipsa, tempore officiis temporibus maxime dolore. Corrupti magnam assumenda nobis
+                        officiis
+                        distinctio soluta natus perspiciatis delectus dolorum numquam doloribus iure, veniam, ratione
+                        odio
+                        praesentium provident. Enim placeat optio voluptas.
+                        Doloremque, voluptatem necessitatibus, error illum culpa dicta, iusto officia unde rem
+                        praesentium
+                        totam minima vel at officiis sequi numquam. Ut officiis molestias magnam facere a? Quas eveniet
+                        nisi
+                        perferendis nulla!
+                        Adipisci esse inventore repellat deserunt. Veritatis porro minima ducimus voluptate numquam, est
+                        vero accusantium excepturi ab consequatur odio quos tempore harum neque omnis blanditiis!
+                        Distinctio
+                        minima odit ducimus rerum culpa?
+                        Explicabo fuga, sint tenetur quam eum fugit provident rem qui eaque ullam facere laboriosam
+                        ducimus.
+                        Expedita beatae omnis eligendi eos excepturi voluptate sint aperiam maxime, laudantium,
+                        voluptatum
+                        natus accusamus iste.
+                        Quaerat quibusdam vero eum ex deserunt dignissimos nihil rem ullam incidunt, tempora
+                        accusantium!
+                        Quam omnis deserunt minus commodi odit laborum? Ut velit quibusdam nobis impedit amet?
+                        Doloremque
+                        rerum modi exercitationem.
+                        Quos, dolores blanditiis. Cupiditate, aspernatur repellendus? Voluptas excepturi repudiandae
+                        voluptatem ad, doloribus culpa at cupiditate molestias nesciunt, odio dignissimos cumque
+                        praesentium
+                        quaerat libero quasi eum nisi cum quo sequi. Blanditiis?
+                        Alias vero non eos minus veniam ipsa corrupti libero impedit est quas beatae cupiditate quos at
+                        amet, natus voluptatibus exercitationem facilis officiis facere ratione nihil illum! Dolores
+                        unde
+                        dolore quos?
+                        Quidem magni amet alias corrupti rerum omnis temporibus quibusdam consequatur nemo itaque
+                        voluptate
+                        quam voluptatem corporis dolorum esse vero magnam, doloribus reiciendis consectetur autem vel
+                        officiis iste? Sed, praesentium aliquid.
+                        Velit repellat, maiores veritatis incidunt soluta vitae voluptate perspiciatis nulla doloribus
+                        quae
+                        quos tenetur maxime numquam pariatur necessitatibus vel ipsum blanditiis harum iusto cupiditate
+                        aut!
+                        Quas, ipsa. Nemo, illum eveniet.
+                    </p>
+                    <h3>Como llegar</h3>
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Esse repellendus, repudiandae
+                        cupiditate
+                        aliquam eum voluptatibus quas magni eos similique molestiae excepturi impedit incidunt nihil
+                        veritatis vitae tempora necessitatibus voluptate iusto.
+                        A ad vel quae recusandae obcaecati repellat facere autem, minus sed. Fugit eligendi nemo neque
+                        porro
+                        earum. Nobis maiores ex dolorum consectetur minus reprehenderit ipsa magni, aliquid rerum quas
+                        ducimus.
+                        Rem eius tenetur earum, ut laudantium labore obcaecati commodi sunt autem inventore vitae rerum
+                        blanditiis? Eius esse porro totam sequi, beatae voluptatum eveniet optio nemo! Quisquam
+                        cupiditate
+                        deleniti nihil expedita?
+                        Facilis natus doloribus eum saepe est eos odit porro eaque tempore reiciendis officiis deleniti,
+                        animi repellendus, corporis numquam ex laboriosam sapiente aperiam culpa! Est, quod libero?
+                        Molestiae ipsum molestias inventore.
+                        Error iure consectetur delectus nisi possimus illo cum corporis. Error quis dolor consequuntur
+                        reprehenderit? Deleniti ipsam doloremque odit magni nostrum repellat deserunt, sit natus? Rerum
+                        voluptatibus magnam explicabo ipsum repudiandae.
+                        Debitis illo ad, facilis nostrum incidunt natus officiis similique dolore impedit nobis nam aut
+                        cupiditate sunt inventore eum reprehenderit ullam? Ipsa, consequatur nisi sequi nobis cum
+                        commodi
+                        impedit est minima.
+                        Ipsa voluptates amet atque soluta doloremque quas facere molestiae illo, sunt quaerat. Magnam
+                        soluta
+                        atque deserunt aliquid aperiam nam quas labore, necessitatibus voluptate ea. Animi quo
+                        dignissimos
+                        libero sed non?
+                        Nisi, facilis nemo minus blanditiis molestiae vitae voluptate quia sit saepe provident
+                        temporibus
+                        eaque debitis atque? Et dolorum dignissimos in mollitia similique aliquam nulla assumenda.
+                        Nostrum
+                        dolorem tempora eligendi est.
+                    </p>
+                </div>
+            </div>
         </section>
 
         <aside>
-                <div class="asideContacto">
-                    <img class="asideImage" src="/Img/aside1.jpg" alt="">
-                    <img class="asideImage" src="/Img/aside2.jpg" alt="">
-                    <img class="asideImage" src="/Img/aside3.jpg" alt="">
-                    <img class="asideImage" src="/Img/aside4.jpg" alt="">
-                    <img class="asideImage" src="/Img/aside5.jpg" alt="">
-                    <img class="asideImage" src="/Img/aside6.jpg" alt="">
-                    <img class="asideImage" src="/Img/aside7.jpg" alt="">
-                    <img class="asideImage" src="/Img/aside8.jpg" alt="">
-                </div>
+            <div class="asideContacto">
+                <img class="asideImage" src="/Img/aside1.jpg" alt="">
+                <img class="asideImage" src="/Img/aside2.jpg" alt="">
+                <img class="asideImage" src="/Img/aside3.jpg" alt="">
+                <img class="asideImage" src="/Img/aside4.jpg" alt="">
+                <img class="asideImage" src="/Img/aside5.jpg" alt="">
+                <img class="asideImage" src="/Img/aside6.jpg" alt="">
+                <img class="asideImage" src="/Img/aside7.jpg" alt="">
+                <img class="asideImage" src="/Img/aside8.jpg" alt="">
+            </div>
         </aside>
 
         <footer class="footer">
