--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -164,6 +164,19 @@
             </div>
         </section>
 
+        <aside>
+            <div class="asideContacto">
+                <img class="asideImage" src="../Img/aside1.jpg" alt="">
+                <img class="asideImage" src="../Img/aside2.jpg" alt="">
+                <img class="asideImage" src="../Img/aside3.jpg" alt="">
+                <img class="asideImage" src="../Img/aside4.jpg" alt="">
+                <img class="asideImage" src="../Img/aside5.jpg" alt="">
+                <img class="asideImage" src="../Img/aside6.jpg" alt="">
+                <img class="asideImage" src="../Img/aside7.jpg" alt="">
+                <img class="asideImage" src="../Img/aside8.jpg" alt="">
+            </div>
+        </aside>
+
         <footer class="footer">
             <div class="footer__info">
                 <h4>Informacion de contacto</h4>
