--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <h1>Moxy</h1>
         </div>
         <nav>
-            <ul class="enlaces">
+            <ul class="enlaces">lalala
                 <li><a href="#">Inicio</a></li>
                 <li><a href="./pages/habitaciones.html"> Habitaciones </a></li>
                 <li><a href="./pages/contacto.html"> Contacto </a></li>
