--- a/pages/habitaciones.html
+++ b/pages/habitaciones.html
@@ -16,7 +16,7 @@
     <header>
         <div class="barraNavegacion">
             <a href="#">
-                <img src="../Iconos/logo_2.png" alt="Logo Moxy">
+                <img src="../Iconos/logo_2.png" alt="logo Moxy">
             </a>
             <h1>Moxy</h1>
         </div>
